<resources>
    <string name="app_name">Vocatbee</string>
    <string name="word_of_the_day">Mother fucking day</string>
    <string name="demo">Demo</string>
    <string name="word">Word</string>
    <string name="definition">Definition:</string>
    <string name="meaning1">no idea ;0</string>
    <string name="meaning2">meaning2</string>
    <string name="meaning3">meaning3</string>
    <string name="meaning4">meaning4</string>
    <string name="meaning5">meaning5</string>
    <string name="asasdasd">/asasdasd/</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="search">Search</string>
    <string name="mother_fucking_day">Mother Day</string>
    <string name="cancel">Cancel</string>
    <string name="enter">Enter</string>
    <string name="enter_a_word">Enter a word or words</string>
    <string name="no_word">No Word</string>
    <string name="you_know_what_about_life">You know what about life?</string>
    <string name="meaning_fuk_fuk_fuk">Meaning: fuk fuk fuk</string>
    <string name="note">No note</string>
    <string name="note_alerts">Note Alerts</string>
    <string name="word_alerts_setting">Word Alert Settings</string>
    <string name="configure_how_your_nalerts_are_received">Configure how your \nalerts are received</string>
    <string name="app_notifications">App Notifications</string>
    <string name="receive_mobile_app_notifications">Receive mobile app notifications</string>
    <string name="name_category">Name Category</string>
    <string name="_0_word">0</string>
    <string name="any_description">Any description ?</string>
    <string name="enter_a_new_category">Enter category name</string>
    <string name="this_action_will_delete_all_words_nin_this_category">This action will delete all words \nin this category.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_this_category">Delete This Category</string>
    <string name="close_menu">Close Menu</string>
    <string name="too_much_word_can_make_annoying">Too many words can make annoying</string>
    <string name="the_time_repeat">The time repeat</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="max_learning_words">Max learning words</string>
    <string name="the_learning_word_list_was_full">The learning word list was full</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="no_i_don_t_want_to_learn_this_word">No, I don\'t want to learn this word:))</string>
    <string name="current_learning_word">Current Learning Word</string>
    <string name="start_at">Start At</string>
    <string name="end_at">End At</string>
    <string name="time_range">Time Range</string>
    <string name="no_category">No Category</string>
    <string name="your_learning_list_is_full_please_go_to_settings_or_take_no_action_0">Your learning list is full. Please go to Settings or take no action :0</string>
    <string name="your_categories">Your Categories</string>
    <string name="the_time_receive">The time receive</string>
    <string name="voice_setting">Voice Setting</string>
    <string name="using_voice">Using Voice</string>
    <string name="turn_on_off_voice_when_notifying">Turn on/off voice when notifying</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_states">United States</string>
    <string name="korean">Korean</string>
    <string name="configure_how_your_voice_is_received">Configure how your voice is received</string>
    <string name="select_voice">Select Voice</string>
    <string name="go_to_this_list">Go to this list</string>
    <string name="_20_words">20 words</string>
    <string name="_10_words">10 words</string>
    <string name="_15_words">15 words</string>
    <string name="_5_words">5 words</string>
    <string name="definitions">Definitions:</string>
    <string name="spell_the_word">Spell the word:</string>
    <string name="spell_it">SPELL IT!</string>
    <string name="incorrect_try_again">Incorrect, Try Again!</string>
    <string name="correct">Correct !!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="end_this_flow">End this Flow?</string>
    <string name="notification_time_at_first">Notification time at first</string>
    <string name="munites">munites</string>
    <string name="_10_00_10_00">10:00 - 10:00</string>
    <string name="add_the_range_time_you_don_t_want_to_get_notification">Add the range time you don\'t want to get notification</string>
    <string name="quite_time">Quiet Time</string>
    <string name="choose_time_range">Choose time range</string>
    <string name="yes_sir">Yes Sir !</string>
    <string name="the_review_was_end">The Review was end!!</string>
    <string name="show_answers">Show Answers</string>
    <string name="d_you_enter_a_empty_word">:D?? you enter a empty word???</string>
    <string name="hong_be_oi">Hong be oi</string>
    <string name="spelling_bee">Spelling Bee</string>
    <string name="current_category">Current category</string>
    <string name="choosing_the_category_you_want_to_move_to">Choosing the category you want to move to</string>
    <string name="add_words">Add Words</string>
    <string name="good_morning">Good Morning</string>
    <string name="focuss" />
    <string name="note_settings">Note Settings</string>
    <string name="enter_a_word_">Enter a word</string>
    <string name="category_list">Category List</string>
    <string name="have_you_review_those_categories">Have you review those categories?</string>
    <string name="briefly_describe_what_goes_here">Briefly describe what goes here..</string>
    <string name="optional">(Optional)</string>
    <string name="description">DESCRIPTION</string>
    <string name="create_new_category">Create New Category</string>
    <string name="category_name">CATEGORY NAME</string>
    <string name="create_category">Create Category</string>
    <string name="warning">Warning</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete_these_categories_this_action_cannot_be_undone">Are you sure you want to delete these categories? This action cannot be undone.</string>
    <string name="discreption_you_fucki">Discreption you fucki</string>
    <string name="no_words">No words</string>
    <string name="category">Category</string>
    <string name="search_a_word">Search a word...</string>
    <string name="the_word_is_already_in_your_list">The word is already in your list</string>
    <string name="can_t_add_the_word">Can\'t add the word !</string>
    <string name="daily_word_limit">Daily Word Limit</string>
    <string name="start_notification_after">Start Notification After</string>
    <string name="yes_stop_it">Yes, Stop it</string>
    <string name="listen_and_spell">Listen And Spell</string>
    <string name="enter_the_word_here">Enter the word here...</string>
    <string name="part_of_speech">PART OF SPEECH</string>
    <string name="notifying_time">Notifying time</string>
    <string name="speaking_when_notifying">Speaking when notifying</string>
    <string name="minutes">minutes</string>
</resources>