<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="34dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:includeFontPadding="false"
        android:text="@string/the_learning_word_list_was_full"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="4dp"
        android:text="@string/your_learning_list_is_full_please_go_to_settings_or_take_no_action_0"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btnGoToSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_enter"
        android:includeFontPadding="false"
        android:textStyle="bold"
        android:paddingVertical="20dp"
        android:text="@string/go_to_setting"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/btnDoNothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:paddingVertical="15dp"
        android:text="@string/no_i_don_t_want_to_learn_this_word"
        android:textColor="@color/button"
        android:textSize="16sp" />

</LinearLayout>