<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ivCat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:includeFontPadding="false"
            android:text="@string/create_new_category"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="9dp"
            android:fontFamily="@font/be_vietnam_pro_semibold"
            android:text="@string/category_name"
            android:textColor="@color/font_title"
            android:textSize="13sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_et_border"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/enter_a_new_category"
                android:includeFontPadding="false"
                android:paddingVertical="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivValid"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icon_valid_et"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/d_you_enter_a_empty_word"
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:includeFontPadding="false"
                android:text="@string/description"
                android:textColor="@color/font_title"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="9dp"
                android:fontFamily="@font/be_vietnam_pro_regular"
                android:includeFontPadding="false"
                android:text="@string/optional"
                android:textColor="@color/gray"
                android:textSize="13sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_et_border"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="top|start"
            android:hint="@string/briefly_describe_what_goes_here"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/font_title"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/background_btn_create_category"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp">

                <TextView
                    android:id="@+id/btnEnter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_semibold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/create_category"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/icon_director_right" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>