<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/bg_dialog"
        android:gravity="end"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/be_vietnam_pro_bold"
            android:text="@string/add_words"
            android:textColor="@color/black1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_et_border"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/enter_a_word"
            android:includeFontPadding="false"
            android:paddingVertical="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/d_you_enter_a_empty_word"
            android:textColor="@color/red"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"
            android:gravity="center">

            <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/black1"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/enterBtn"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/background_btn_create_category"
                android:fontFamily="@font/be_vietnam_pro_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="2dp"
                android:paddingVertical="10dp"
                android:paddingBottom="1dp"
                android:text="@string/enter"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/ivCat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:src="@drawable/happy_cat" />
</FrameLayout>