<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam_pro_semibold"
                    android:includeFontPadding="false"
                    android:text="@string/note_alerts"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_notification" />

                    <TextView
                        android:id="@+id/tv_appNotification"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/app_notifications"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switchAppNotification"
                        android:layout_width="55dp"
                        android:layout_height="15dp"
                        android:checked="false"
                        android:theme="@style/ThemeOverlay.App.MaterialSwitch"
                        app:thumbTint="@color/white"
                        app:trackDecoration="@color/transparent"
                        app:trackTint="@color/switch_track_color" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingVertical="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_volume" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/speaking_when_notifying"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <com.google.android.material.materialswitch.MaterialSwitch
                        android:id="@+id/switchVoiceNotifying"
                        android:layout_width="55dp"
                        android:layout_height="15dp"
                        android:checked="false"
                        android:theme="@style/ThemeOverlay.App.MaterialSwitch"
                        app:thumbTint="@color/white"
                        app:trackDecoration="@color/transparent"
                        app:trackTint="@color/switch_track_color" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingVertical="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_clock" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/start_notification_after"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <EditText
                        android:includeFontPadding="false"
                        android:id="@+id/etLv1"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@null"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:inputType="number"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:text="15"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/minutes"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingVertical="15dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/icon_notification" />

                    <TextView
                        android:id="@+id/time_range"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/notifying_time"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/btnEditTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/_10_00_10_00"
                        android:textColor="@color/gray"
                        android:textSize="15sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingVertical="12dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_limit_word" />

                    <TextView
                        android:id="@+id/tv_max_words"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/be_vietnam_pro_regular"
                        android:includeFontPadding="false"
                        android:text="@string/daily_word_limit"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>

                <androidx.compose.ui.platform.ComposeView
                    android:id="@+id/composeSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_too_much" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>